src/test/BadInterfaceInheritance/BadInterfaceInheritance.expected
error: BadInterfaceInheritance.panda:4:1: 'ParentClass' is not an interface
error: BadInterfaceInheritance.panda:10:1: interface 'ParentInterface' cannot be subclassed by a class
error: BadInterfaceInheritance.panda:13:1: 'ParentClass' is not an interface
3 errors
