src/test/BadInterfaceInheritance/BadInterfaceInheritance.panda
class ParentClass {
}

interface ExtendClass : ParentClass {
}

interface ParentInterface {
}

class ExtendInterface : ParentInterface {
}

class ImplementClass (ParentClass) {
}